# Templates

./: .clang-format  CMakeLists-Lib.txt  CMakeLists.txt  LICENSE  README.md
AutoGitClangFormat/: .clang-format  pre-commit
PPT/: build_linux.sh  build_win.bat  md2html.py
docs/: qt特殊效果.md  qt编程规范.md
examples/: CMakeLists.txt
qt/: CMakeLists.txt
scripts/: 3rdparty.py  auto_py_proj_requirements_solver.py  build_cxx_proj.py  gcc_torch_cuda.json  repo_infos.json
tests/: CMakeLists.txt
